26 October 2010: Wouter
	- dump_infra and flush_infra commands for unbound-control.
	- no timeout backoff if meanwhile a query succeeded.

25 October 2010: Wouter
	- Configure errors if ldns is not found.

22 October 2010: Wouter
	- Windows 7 fix for the installer.

21 October 2010: Wouter
	- Fix bug where fallback_tcp causes wrong roundtrip and edns
	  observation to be noted in cache.  Fix bug where EDNSprobe halted
	  exponential backoff if EDNS status unknown.
	- new unresponsive host method, exponentially increasing block backoff.
	- iana portlist updated.

20 October 2010: Wouter
	- interface automatic works for some people with ip6 disabled.
	  Therefore the error check is removed, so they can use the option.

19 October 2010: Wouter
	- Fix for request list growth, if a server has long timeout but the
	  lost counter is low, then its effective rtt is the one without
	  exponential backoff applied.  Because the backoff is not working.
	  The lost counter can then increase and the server is blacklisted,
	  or the lost counter does not increase and the server is working
	  for some queries.

18 October 2010: Wouter
	- iana portlist updated.

13 October 2010: Wouter
	- Fix TCP so it uses a random outgoing-interface.
	- unbound-anchor handles ADDPEND keystate.

11 October 2010: Wouter
	- Fix bug when DLV below a trust-anchor that uses NSEC3 optout where
	  the zone has a secure delegation hosted on the same server did not
	  verify as secure (it was insecure by mistake).
	- iana portlist updated.
	- ldns tarball updated (for reading cachedumps with bad RR data).

1 October 2010: Wouter
	- test for unbound-anchor. fix for reading certs.
	- Fix alloc_reg_release for longer uptime in out of memory conditions.

28 September 2010: Wouter
	- unbound-anchor working, it creates or updates a root.key file.
	  Use it before you start the validator (e.g. at system boot time).

27 September 2010: Wouter
	- iana portlist updated.

24 September 2010: Wouter